syntax = "proto3";

package sidechain.mockmodule;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "sidechain/mockmodule/params.proto";

option go_package = "sidechain/x/mockmodule/types";

// GenesisState defines the mockmodule module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
  Params params  = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  string port_id = 2;
}

